Deleted row add green color in footer icon and fix wrap

--- a/style/style.css
+++ b/style/style.css
@@ -65,10 +65,6 @@ header nav .speaker-view{
 main .gallery{
     height: 700px;
     overflow: auto;
-}
-
-main .row{
-    padding: 10px 0;
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -76,7 +72,7 @@ main .row{
 .col{
     flex-basis: 350px;
     height: 200px;
-    margin: 0 5px;
+    margin: 5px;
     background-image: url('https://picsum.photos/id/1005/300/200');
     background-size: cover;
     position: relative;
@@ -106,6 +102,10 @@ footer .footer-bar .col-footer{
 
 footer .footer-bar .col-footer .element{
     padding: 0 10px;
+}
+
+footer .footer-bar .col-footer .element .fas.fa-share-square{
+    color: #4bc800;
 }
 
 footer .footer-bar .col-footer:last-child{
